--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.67.0"
+    "sass": "^1.67.0",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@types/node": "20.6.2",
